--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,23 +24,27 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li class="nav-item">
-                  <%= link_to user_path, class: "nav-link text-light" do %>
-                    <i class="fas fa-solid fa-house-chimney"> Home</i>
+                  <%= link_to user_path(current_user.id), class: "nav-link text-light" do %>
+                    <i class="fas fa-home"></i>
+                      Home
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to users_path, class: "nav-link text-light" do %>
-                    <i class="fas fa-solid fa-users"> Users</i>
+                    <i class="fas fa-users"></i>
+                      Users
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to books_path, class: "nav-link text-light" do %>
-                    <i class="fa-solid fa-book-open"> Books</i>
+                    <i class="fas fa-book-open"></i>
+                      Books
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %>
-                    <i class="fa-solid fa-right-from-bracket"> Log out</i>
+                    <i class="fas fa-sign-out-alt"></i>
+                      Log out
                   <% end %>
                 </li>
               <% else %>
