--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,50 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<main>
+  <p id="notice"></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+          <h2>User info</h2>
+            <%= form_with model: @user do |f| %>
+              <div class="field">
+                <%= f.label :name %><br />
+                <%= f.text_field :name, autofocus: true %>
+              </div>
+
+              <div class="field">
+                <%= f.label :profile_image %><br />
+                <%= f.file_field :profile_image, accept: 'image/*' %>
+              </div>
+
+              <div class="field">
+                <%= f.label :introduction %><br />
+                <%= f.text_area :introduction, autocomplete: "introduction" %>
+              </div>
+
+              <%= f.submit 'Update User' %>
+            <% end %>
+          <!--<form enctype="multipart/form-data" action="/users/68474" accept-charset="UTF-8" method="post">-->
+          <!--  <input name="utf8" type="hidden" value="✓">-->
+          <!--  <input type="hidden" name="_method" value="patch">-->
+          <!--  <input type="hidden" name="authenticity_token" value="+ROwM/EGDNAmFZn/RT8aiXCmPQeHFLeqC2oVBJzZd2ijY88WyvqLaKUtfBz71LJu9DvU0kjjMK1uXJiZ6cEw/Q==">-->
+
+          <!--  <div class="form-group">-->
+          <!--    <label for="user_name">Name</label>-->
+          <!--    <input class="form-control name" type="text"  name="user[name]" id="user_name">-->
+          <!--  </div>-->
+          <!--  <div class="form-group">-->
+          <!--    <label for="user_image">Image</label>-->
+          <!--    <input value="{}" data-reference="53d537cdd8b198a33bfc00bf4351f7f7" type="hidden" name="user[profile_image]">-->
+          <!--    <input class="form-control-file user_image" data-reference="53d537cdd8b198a33bfc00bf4351f7f7" include_hidden="false" type="file" name="user[profile_image]" id="user_profile_image">-->
+          <!--  </div>-->
+          <!--  <div class="form-group">-->
+          <!--    <label for="user_introduction">Introduction</label>-->
+          <!--    <textarea class="form-control introduction" name="user[introduction]" id="user_introduction"></textarea>-->
+          <!--  </div>-->
+          <!--  <div class="form-group">-->
+          <!--    <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">-->
+          <!--  </div>-->
+          <!--</form>-->
+        </div>
+      </div>
+    </div>
+</main>
