--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,82 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<main>
+  <p id="notice"></p>
+    <div class="container px-5 px-sm-0">
+      <div class="row">
+        <div class="col-md-3">
+          <h2>User info</h2>
+            <% if @user.profile_image.attached? %>
+              <%= image_tag @user.profile_image, size: "63×63" %>
+            <% else %>
+              <%= image_tag 'no_image', size: "63×63" %>
+            <% end %>
+
+            <table class="table">
+              <tbody>
+                <tr></tr>
+                <tr>
+                	  <th>name</th>
+                	  <th><%= @user.name %></th>
+                </tr>
+                <tr>
+              	  <th>introduction</th>
+              	  <th><%= @user.introduction %></th>
+                </tr>
+              </tbody>
+            </table>
+
+<div class="row">
+  <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_68717" href="/users/68717/edit"></a>
+</div>
+      <h2 class="mt-3">New book</h2>
+      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="kSef35AiSpWNwgZxI1bDEwniidARW86AOvIiWJ5YY3wpFQooKJroXheS2YZOIjEpHR7vS/qxQaM6h1u9VTc2Kw==">
+  <div class="form-group">
+    <label for="book_title">Title</label>
+    <input class="form-control book_title" type="text" name="book[title]" id="book_title">
+  </div>
+  <div class="form-group">
+    <label for="book_opinion">Opinion</label>
+    <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
+  </div>
+  <div class="form-group">
+    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
+  </div>
+</form>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table">
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+      <tr>
+        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
+        <td>Olivia</td>
+        <td><a class="user_68714" href="/users/68714">Show</a></td>
+      </tr>
+      <tr>
+        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
+        <td>サンプルタロウ</td>
+        <td><a class="user_68715" href="/users/68715">Show</a></td>
+      </tr>
+      <tr>
+        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
+        <td>Lucas</td>
+        <td><a class="user_68716" href="/users/68716">Show</a></td>
+      </tr>
+      <tr>
+        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
+        <td>ono</td>
+        <td><a class="user_68717" href="/users/68717">Show</a></td>
+      </tr>
+  </tbody>
+</table>
+
+    </div>
+  </div>
+</div>
+      </main>
