--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,80 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<main>
+  <p id="notice">You have created book successfully.</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <h2>User info</h2>
+          <table class="table">
+            <tbody>
+              <tr></tr>
+              <tr>
+            	  <th>name</th>
+            	  <th><%= @user.name %></th>
+              </tr>
+              <tr>
+            	  <th>introduction</th>
+            	  <th><%= @user.introduction %></th>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="row">
+            <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+              <i class="fas fa-user-cog"></i>
+            <% end %>
+          </div>
+
+          <h2 class="mt-3">New book</h2>
+            <%= form_with model: @book do |f| %>
+
+              <h4>Title</h4>
+              <%= f.text_field :title %>
+
+              <h4>Opinion</h4>
+              <%= f.text_area :body %>
+
+              <br><%= f.submit 'Create Book' %></br>
+
+            <% end %>
+        </div>
+        <div class="col-md-8 offset-md-1">
+          <h2>Books</h2>
+            <table class="table table-hover table-inverse">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @books.each do |book| %>
+                <tr>
+                  <td>
+                    <% if book.user.profile_image.attached? %>
+                      <%= link_to user_path(book.user.id) do %>
+                        <%= image_tag book.user.profile_image, size: "40×40" %><br />
+                      <% end %>
+                    <% else %>
+                      <%= link_to user_path(book.user.id) do %>
+                        <%= image_tag 'no_image', size: "40×40" %><br />
+                      <% end %>
+                    <% end %>
+                  </td>
+                  <td>
+                    <%= link_to book_path(book.user.id) do %>
+                      <%= book.title %>
+                    <% end %>
+                  </td>
+                  <td>
+                    <%= book.body %>
+                  </td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+        </div>
+      </div>
+    </div>
+</main>
