--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,77 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h2>User info</h2>
+          <% if @user.profile_image.attached? %>
+            <%= image_tag @user.profile_image, size: "63×63" %>
+          <% else %>
+            <%= image_tag 'no_image', size: "63×63" %>
+          <% end %>
+        <table class="table">
+          <tbody>
+            <tr></tr>
+            <tr>
+          	  <th>name</th>
+          	  <th><%= @user.name %></th>
+            </tr>
+            <tr>
+          	  <th>introduction</th>
+          	  <th><%= @user.introduction %></th>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="row">
+          <%= link_to edit_user_path, class: "btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
+        </div>
+
+        <h2 class="mt-3">New book</h2>
+          <%= form_with model: @book do |f| %>
+
+            <h4>Title</h4>
+            <%= f.text_field :title %>
+
+            <h4>Opinion</h4>
+            <%= f.text_area :body %>
+
+            <br><%= f.submit 'Create Book' %></br>
+
+          <% end %>
+      </div>
+      <div class="col-md-8 offset-md-1">
+    		<h2>Book detail</h2>
+      		<table class="table">
+      		  <tbody>
+      		    <tr>
+                <td>
+                  <%= link_to user_path do %>
+                    <%= image_tag @user.profile_image, size: "40×40" %>
+                    <%= @user.name %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to book_path do %>
+                    <%= @book.title %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= @book.body %>
+                </td>
+                <% if @book.user_id == current_user.id do %>
+                  <td>
+                    <%= link_to "Edit", edit_book_path, class: "btn btn-sm btn-success", method: :patch %>
+                  </td>
+                  <td>
+                    <%= link_to "Destroy", books_path, class: "btn btn-sm btn-danger", method: :delete %>
+                  </td>
+                <% end %>
+              </tr>
+            </tbody>
+          </table>
+      </div>
+    </div>
+  </div>
+</main>
