--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,7 @@
               </div>
 
               <div class="field">
-                <%= f.label :profile_image %><br />
+                <%= f.label :image %><br />
                 <%= f.file_field :profile_image, accept: 'image/*' %>
               </div>
 
@@ -22,28 +22,6 @@
 
               <%= f.submit 'Update User' %>
             <% end %>
-          <!--<form enctype="multipart/form-data" action="/users/68474" accept-charset="UTF-8" method="post">-->
-          <!--  <input name="utf8" type="hidden" value="✓">-->
-          <!--  <input type="hidden" name="_method" value="patch">-->
-          <!--  <input type="hidden" name="authenticity_token" value="+ROwM/EGDNAmFZn/RT8aiXCmPQeHFLeqC2oVBJzZd2ijY88WyvqLaKUtfBz71LJu9DvU0kjjMK1uXJiZ6cEw/Q==">-->
-
-          <!--  <div class="form-group">-->
-          <!--    <label for="user_name">Name</label>-->
-          <!--    <input class="form-control name" type="text"  name="user[name]" id="user_name">-->
-          <!--  </div>-->
-          <!--  <div class="form-group">-->
-          <!--    <label for="user_image">Image</label>-->
-          <!--    <input value="{}" data-reference="53d537cdd8b198a33bfc00bf4351f7f7" type="hidden" name="user[profile_image]">-->
-          <!--    <input class="form-control-file user_image" data-reference="53d537cdd8b198a33bfc00bf4351f7f7" include_hidden="false" type="file" name="user[profile_image]" id="user_profile_image">-->
-          <!--  </div>-->
-          <!--  <div class="form-group">-->
-          <!--    <label for="user_introduction">Introduction</label>-->
-          <!--    <textarea class="form-control introduction" name="user[introduction]" id="user_introduction"></textarea>-->
-          <!--  </div>-->
-          <!--  <div class="form-group">-->
-          <!--    <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">-->
-          <!--  </div>-->
-          <!--</form>-->
         </div>
       </div>
     </div>
