--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,59 +24,54 @@
               </tbody>
             </table>
 
-<div class="row">
-  <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_68717" href="/users/68717/edit"></a>
-</div>
-      <h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="kSef35AiSpWNwgZxI1bDEwniidARW86AOvIiWJ5YY3wpFQooKJroXheS2YZOIjEpHR7vS/qxQaM6h1u9VTc2Kw==">
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <input class="form-control book_title" type="text" name="book[title]" id="book_title">
-  </div>
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
-  </div>
-  <div class="form-group">
-    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
-  </div>
-</form>
-    </div>
-    <div class="col-md-8 offset-md-1">
-      <h2>Users</h2>
-      <table class="table">
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-      <tr>
-        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
-        <td>Olivia</td>
-        <td><a class="user_68714" href="/users/68714">Show</a></td>
-      </tr>
-      <tr>
-        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
-        <td>サンプルタロウ</td>
-        <td><a class="user_68715" href="/users/68715">Show</a></td>
-      </tr>
-      <tr>
-        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
-        <td>Lucas</td>
-        <td><a class="user_68716" href="/users/68716">Show</a></td>
-      </tr>
-      <tr>
-        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg"></td>
-        <td>ono</td>
-        <td><a class="user_68717" href="/users/68717">Show</a></td>
-      </tr>
-  </tbody>
-</table>
+            <div class="row">
+              <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+                <i class="fas fa-user-cog"></i>
+              <% end %>
+            </div>
 
+            <h2 class="mt-3">New book</h2>
+            <%= form_with model: @book do |f| %>
+
+              <h4>Title</h4>
+              <%= f.text_field :title %>
+
+              <h4>Opinion</h4>
+              <%= f.text_area :body %>
+
+              <br><%= f.submit 'Create Book' %></br>
+
+            <% end %>
+
+        </div>
+        <div class="col-md-8 offset-md-1">
+          <h2>Users</h2>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>image</th>
+                  <th>name</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @users.each do |user| %>
+                  <tr>
+                    <td>
+                      <% if user.profile_image.attached? %>
+                          <%= image_tag user.profile_image, size: "40×40" %><br />
+                      <% else %>
+                        <%= image_tag 'no_image', size: "40×40" %><br />
+                      <% end %>
+                    </td>
+                    <td><%= user.name %></td>
+                    <td><%= link_to "Show", user_path(user) %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-      </main>
+</main>
