--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    		<h1>Editing Book</h1>
+          <%= form_with model: @book do |f| %>
+            <h4>Title</h4>
+              <%= f.text_field :title %>
+            <h4>Opinion</h4>
+              <%= f.text_area :body %>
+              <%= f.submit 'Update Book' %>
+          <% end %>
+
+          <%= link_to book_path(@book) do %>
+        		<i class="book_156">Show</i>
+        	<% end %>
+
+        	<%= link_to books_path do %>
+        		<i class="back">Back</i>
+        	<% end %>
+      </div>
+    </div>
+  </div>
+</main>
