--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -50,27 +50,27 @@
               </thead>
               <tbody>
                 <% @books.each do |book| %>
-                <tr>
-                  <td>
-                    <% if book.user.profile_image.attached? %>
-                      <%= link_to user_path(book.user.id) do %>
-                        <%= image_tag book.user.profile_image, size: "40×40" %><br />
+                  <tr>
+                    <td>
+                      <% if book.user.profile_image.attached? %>
+                        <%= link_to user_path(book.user.id) do %>
+                          <%= image_tag book.user.profile_image, size: "40×40" %><br />
+                        <% end %>
+                      <% else %>
+                        <%= link_to user_path(book.user.id) do %>
+                          <%= image_tag 'no_image', size: "40×40" %><br />
+                        <% end %>
                       <% end %>
-                    <% else %>
-                      <%= link_to user_path(book.user.id) do %>
-                        <%= image_tag 'no_image', size: "40×40" %><br />
+                    </td>
+                    <td>
+                      <%= link_to book_path(book) do %>
+                        <%= book.title %>
                       <% end %>
-                    <% end %>
-                  </td>
-                  <td>
-                    <%= link_to book_path(book.user.id) do %>
-                      <%= book.title %>
-                    <% end %>
-                  </td>
-                  <td>
-                    <%= book.body %>
-                  </td>
-                </tr>
+                    </td>
+                    <td>
+                      <%= book.body %>
+                    </td>
+                  </tr>
                 <% end %>
               </tbody>
             </table>
