--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,38 +8,38 @@
           <% else %>
             <%= image_tag 'no_image', size: "63×63" %>
           <% end %>
-        <table class="table">
-          <tbody>
-            <tr></tr>
-            <tr>
-          	  <th>name</th>
-          	  <th><%= @user.name %></th>
-            </tr>
-            <tr>
-          	  <th>introduction</th>
-          	  <th><%= @user.introduction %></th>
-            </tr>
-          </tbody>
-        </table>
+          <table class="table">
+            <tbody>
+              <tr></tr>
+              <tr>
+            	  <th>name</th>
+            	  <th><%= @user.name %></th>
+              </tr>
+              <tr>
+            	  <th>introduction</th>
+            	  <th><%= @user.introduction %></th>
+              </tr>
+            </tbody>
+          </table>
 
-        <div class="row">
-          <%= link_to edit_user_path, class: "btn btn-outline-secondary btn-block" do %>
-            <i class="fas fa-user-cog"></i>
-          <% end %>
-        </div>
+          <div class="row">
+            <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" do %>
+              <i class="fas fa-user-cog"></i>
+            <% end %>
+          </div>
 
-        <h2 class="mt-3">New book</h2>
-          <%= form_with model: @book do |f| %>
+          <h2 class="mt-3">New book</h2>
+            <%= form_with model: Book.new do |f| %>
 
-            <h4>Title</h4>
-            <%= f.text_field :title %>
+              <h4>Title</h4>
+              <%= f.text_field :title %>
 
-            <h4>Opinion</h4>
-            <%= f.text_area :body %>
+              <h4>Opinion</h4>
+              <%= f.text_area :body %>
 
-            <br><%= f.submit 'Create Book' %></br>
+              <br><%= f.submit 'Create Book' %></br>
 
-          <% end %>
+            <% end %>
       </div>
       <div class="col-md-8 offset-md-1">
     		<h2>Book detail</h2>
@@ -47,25 +47,30 @@
       		  <tbody>
       		    <tr>
                 <td>
-                  <%= link_to user_path do %>
-                    <%= image_tag @user.profile_image, size: "40×40" %>
-                    <%= @user.name %>
+                  <%= link_to user_path(@user.id) do %>
+                    <% if @user.profile_image.attached? %>
+                      <%= image_tag @user.profile_image, size: "40×40" %><br />
+                      <%= @user.name %>
+                    <% else %>
+                      <%= image_tag 'no_image', size: "40×40" %><br />
+                      <%= @user.name %>
+                    <% end %>
                   <% end %>
                 </td>
                 <td>
-                  <%= link_to book_path do %>
+                  <%= link_to book_path(@user.id) do %>
                     <%= @book.title %>
                   <% end %>
                 </td>
                 <td>
                   <%= @book.body %>
                 </td>
-                <% if @book.user_id == current_user.id do %>
+                <% if @book.user_id == current_user.id %>
                   <td>
-                    <%= link_to "Edit", edit_book_path, class: "btn btn-sm btn-success", method: :patch %>
+                    <%= link_to "Edit", edit_book_path, class: "btn btn-sm btn-success" %>
                   </td>
                   <td>
-                    <%= link_to "Destroy", books_path, class: "btn btn-sm btn-danger", method: :delete %>
+                    <%= link_to "Destroy", book_path(@book), class: "btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に消しますか？" %>
                   </td>
                 <% end %>
               </tr>
