--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
           </table>
 
           <div class="row">
-            <%= link_to user_path(current_user), class: "btn btn-outline-secondary btn-block" do %>
+            <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" do %>
               <i class="fas fa-user-cog"></i>
             <% end %>
           </div>
@@ -70,7 +70,7 @@
                     <% end %>
                   </th>
                   <th>
-                    <%= link_to book_path(book.user.id) do %>
+                    <%= link_to book_path(book.id) do %>
                       <%= book.title %>
                     <% end %>
                   </th>
