--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,14 @@
 <main>
-  <p id="notice">You have created book successfully.</p>
+  <%= flash[:notice] %>
+    <% if @book.errors.any? %>
+    <%= @book.errors.count %>error prohibited this obj from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
     <div class="container">
       <div class="row">
         <div class="col-md-3">
